--- a/www/css/style.css
+++ b/www/css/style.css
@@ -280,7 +280,7 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 @media screen and (max-width: 600px) {
-.topnav a:not(:first-child) {display:block; transform: translate(0, -100%); transition: transform 2s;}
+.topnav a:not(:first-child) {display:block; transform: translate(0%, -100%); transition: transform 2s;}
 .topnav a.icon {
     float: right;
     display: block;
@@ -299,6 +299,7 @@ input[type=checkbox] { visibility: hidden; }
     float: none;
     display: block;
     text-align: center;
+    transform: translate(0%, 0%);
 }
 
 #belownav{
