--- a/www/css/style.css
+++ b/www/css/style.css
@@ -249,15 +249,14 @@ input[type=checkbox] { visibility: hidden; }
 
 .topnav {
     overflow: hidden;
-    background: linear-gradient(0deg, rgba(0,0,0,0), white, rgba(0,0,0,.666), rgba(0,0,0,.666), rgba(0,0,0,.666),rgba(0,0,0,.666), rgba(0,0,0,.666) 10%);
+    background-color: #333;
     z-index: 10;
     position: fixed;
     width: 100%;
-    height: 47px;
-    transition: height 2s;
   }
   
 .topnav a {
+    float: left;
     display: block;
     color: #f2f2f2;
     text-align: center;
@@ -266,13 +265,13 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 .topnav a:hover {
-    background: radial-gradient(#fff 30%, transparent, transparent) !important;
+    background-color: #ddd;
     color: black !important;
     cursor: pointer;
 }
 
 .topnav a.active {
-    background: radial-gradient(#070 30%, transparent, transparent);
+    background-color: #4CAF50;
     color: white;
 }
 
@@ -281,31 +280,25 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 @media screen and (max-width: 600px) {
-.topnav a:not(:first-child) {display:block; transform: translate(0%, -1000%); transition: transform 2s;}
+.topnav a:not(:first-child) {display: none;}
 .topnav a.icon {
     float: right;
     display: block;
-    position: fixed;
-    right: 0px;
-    top: 0px;
-    transform: none;
 }
 }
 
 @media screen and (max-width: 600px) {
-.topnav.responsive {position: fixed; height: auto; transition: height 2s;}
+.topnav.responsive {position: fixed;}
 .topnav.responsive .icon {
     position: fixed;
     right: 0;
     top: 0;
-    transform: translate(0%, 0%);
 }
 }
 .topnav.responsive a {
     float: none;
     display: block;
-    text-align: center;
-    transform: translate(0%, 0%);
+    text-align: left;
 }
 
 #belownav{
