--- a/www/css/style.css
+++ b/www/css/style.css
@@ -280,7 +280,7 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 @media screen and (max-width: 600px) {
-.topnav a:not(:first-child) {display: none;}
+.topnav a:not(:first-child:last-child) {display: none;}
 .topnav a.icon {
     float: right;
     display: block;
