--- a/www/css/style.css
+++ b/www/css/style.css
@@ -281,7 +281,7 @@ input[type=checkbox] { visibility: hidden; }
 
 @media screen and (max-width: 600px) {
 .topnav a:not(:first-child) {transform: translate(0%, -100%);}
-.topnav a:not(:last-child) {transform: none;}
+.topnav a:last-child {transform: none;}
 .topnav a.icon {
     float: right;
     display: block;
