--- a/www/css/style.css
+++ b/www/css/style.css
@@ -252,6 +252,8 @@ input[type=checkbox] { visibility: hidden; }
     z-index: 10;
     position: fixed;
     width: 100%;
+    height: 47px;
+    transition: height 2s;
     background: linear-gradient(45deg, black, transparent);
   }
   
@@ -294,7 +296,7 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 @media screen and (max-width: 600px) {
-.topnav.responsive {position: fixed;}
+.topnav.responsive {position: fixed; height:auto;}
 .topnav.responsive .icon {
     position: fixed;
     right: 0;
