--- a/www/css/style.css
+++ b/www/css/style.css
@@ -284,7 +284,7 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 @media screen and (max-width: 600px) {
-.topnav a:not(:first-child) {transform: translate(0%, -1000%);}
+.topnav a:not(:first-child) {transform: translate(0%, -1000%); z-index: -1;}
 .topnav a:not(:last-child) {width: 100%;}
 .topnav a:last-child {transform: none;}
 .topnav a.icon {
