--- a/www/css/style.css
+++ b/www/css/style.css
@@ -285,7 +285,10 @@ input[type=checkbox] { visibility: hidden; }
 
 @media screen and (max-width: 600px) {
 .topnav a:not(:first-child) {transform: translate(0%, -1000%);}
-.topnav a:not(:last-child:first-child) {width: 100%; z-index: -5;}
+.topnav a:not(:last-child:first-child) {width: 100%; z-index: -5;
+    float: left;
+    display: block;
+    text-align: left;}
 .topnav a:last-child {transform: none;}
 .topnav a.icon {
     float: right;
