--- a/www/css/style.css
+++ b/www/css/style.css
@@ -284,8 +284,7 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 @media screen and (max-width: 600px) {
-.topnav a:not(:first-child) {transform: translate(0%, -1000%);}
-.topnav a:not(:last-child:first-child) {width: 100%; z-index: -5;
+.topnav a:not(:first-child) {transform: translate(0%, -1000%);width: 100%; z-index: -5;
     float: left;
     display: block;
     text-align: left;}
