--- a/www/css/style.css
+++ b/www/css/style.css
@@ -288,7 +288,8 @@ input[type=checkbox] { visibility: hidden; }
     float: left;
     display: block;
     text-align: left;}
-.topnav a:first-child {z-index: -5;}
+.topnav a:first-child {z-index: 5;
+    position: fixed;}
 .topnav a:last-child {transform: none; z-index: 100;}
 .topnav a.icon {
     float: right;
