--- a/www/css/style.css
+++ b/www/css/style.css
@@ -291,6 +291,9 @@ input[type=checkbox] { visibility: hidden; }
 .topnav a:first-child {z-index: 5;
     position: fixed;}
 .topnav a:last-child {transform: none; z-index: 100;}
+.topnav.responsive a:not(:first-child) {
+    transform: translate(0%, 100%);
+}
 .topnav a.icon {
     float: right;
     display: block;
