--- a/www/css/style.css
+++ b/www/css/style.css
@@ -268,7 +268,7 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 .topnav a:hover {
-    background: radial-gradient(white, transparent)
+    background: radial-gradient(white, transparent);
     color: black !important;
     cursor: pointer;
 }
