--- a/www/css/style.css
+++ b/www/css/style.css
@@ -264,11 +264,11 @@ input[type=checkbox] { visibility: hidden; }
     text-decoration: none;
     transform: translate(0%, 0%);
     transition: transform 2s;
-    background: radial-gradient(black, transparent);
+    background: radial-gradient(black 80%, transparent);
 }
 
 .topnav a:hover {
-    background: radial-gradient(white, transparent);
+    background: radial-gradient(white 80%, transparent);
     color: black !important;
     cursor: pointer;
 }
