--- a/www/css/style.css
+++ b/www/css/style.css
@@ -253,6 +253,7 @@ input[type=checkbox] { visibility: hidden; }
     width: 100%;
     height: 47px;
     transition: height 2s;
+    border: 1px solid #fff;
   }
   
 .topnav a {
