--- a/www/css/style.css
+++ b/www/css/style.css
@@ -253,7 +253,7 @@ input[type=checkbox] { visibility: hidden; }
     width: 100%;
     height: 47px;
     transition: height 2s;
-    border: 1px solid #fff;
+    border: 1px solid #fff; 
   }
   
 .topnav a {
@@ -289,11 +289,10 @@ input[type=checkbox] { visibility: hidden; }
     float: left;
     display: block;
     text-align: left;}
-.topnav a:first-child {z-index: 5;
-    position: fixed;}
+.topnav a:first-child {z-index: 5;}
 .topnav a:last-child {transform: none; z-index: 100;}
 .topnav.responsive a:not(:first-child) {
-    transform: translate(0%, 100%) !important;
+    transform: translate(0%, 0%) !important;
 }
 .topnav.responsive a:first-child {
     transform: translate(0%, 0%) !important;
