--- a/www/css/style.css
+++ b/www/css/style.css
@@ -314,7 +314,7 @@ input[type=checkbox] { visibility: hidden; }
 
 @media screen and (max-width: 600px) {
 .topnav.responsive {position: fixed;
-    height: calc(100% + 47px);}
+    height: auto;}
 .topnav.responsive .icon {
     position: fixed;
     right: 0;
