--- a/www/css/style.css
+++ b/www/css/style.css
@@ -250,9 +250,9 @@ input[type=checkbox] { visibility: hidden; }
     overflow: hidden;
     z-index: 10;
     position: fixed;
-    width: 100%;
     height: 47px;
     transition: height 2s;
+    width: min-content;
   }
   
 .topnav a {
