--- a/www/css/style.css
+++ b/www/css/style.css
@@ -266,7 +266,7 @@ input[type=checkbox] { visibility: hidden; }
 }
 
 .topnav a:hover {
-    background: radial-gradient(white 40%, transparent);
+    background: radial-gradient(white 40%, transparent) !important;
     color: black !important;
     cursor: pointer;
 }
