--- a/www/css/style.css
+++ b/www/css/style.css
@@ -250,6 +250,7 @@ input[type=checkbox] { visibility: hidden; }
     overflow: hidden;
     z-index: 10;
     position: fixed;
+    border-bottom: 1px solid #fff;
   }
   
 .topnav a {
