--- a/www/css/style.css
+++ b/www/css/style.css
@@ -251,6 +251,7 @@ input[type=checkbox] { visibility: hidden; }
     z-index: 10;
     position: fixed;
     border-bottom: 1px solid #fff;
+    height: 47px;
   }
   
 .topnav a {
