--- a/www/css/style.css
+++ b/www/css/style.css
@@ -263,18 +263,18 @@ input[type=checkbox] { visibility: hidden; }
     text-decoration: none;
     transform: translate(0%, 0%);
     transition: transform 1s !important;
-    background: radial-gradient(black 50%, transparent, transparent);
+    background: linear-gradient(45deg,black 50%, transparent, transparent);
     border: 1px solid #fff;
 }
 
 .topnav a:hover {
-    background: radial-gradient(white 50%, transparent, transparent) !important;
+    background: linear-gradient(45deg,white 50%, transparent, transparent) !important;
     color: black !important;
     cursor: pointer;
 }
 
 .topnav a.active {
-    background: radial-gradient( #4CAF50 50%, transparent, transparent);
+    background: linear-gradient(45deg, #4CAF50 50%, transparent, transparent);
     color: white;
 }
 
