--- a/www/css/style.css
+++ b/www/css/style.css
@@ -287,7 +287,8 @@ input[type=checkbox] { visibility: hidden; }
     transition: transform 1s !important;
 }
 .topnav a:not(:first-child) {transform: translate(-100%, 0%);width: auto; z-index: -5;
-    display: block;}
+    display: block;
+    transition: transform 1s !important;}
 .topnav a:first-child {z-index: 5;}
 .topnav a:last-child {transform: none; z-index: 100;}
 .topnav.responsive a:not(:first-child) {
