--- a/www/css/style.css
+++ b/www/css/style.css
@@ -262,7 +262,7 @@ input[type=checkbox] { visibility: hidden; }
     padding: 14px 16px;
     text-decoration: none;
     transform: translate(0%, 0%);
-    transition: transform 1s !important;
+    transition: transform 1s, height 1s !important;
     background: linear-gradient(45deg,black 50%, transparent);
     border: 1px solid #fff !important;
 }
@@ -284,24 +284,24 @@ input[type=checkbox] { visibility: hidden; }
 
 @media screen and (max-width: 600px) {
 .topnav {
-    transition: transform 1s !important;
+    transition: transform 1s, height 1s !important;
 }
 .topnav a:not(:first-child) {transform: translate(-100%, 0%);width: auto; z-index: -5;
     display: block;
-    transition: transform 1s !important;}
+    transition: transform 1s, height 1s !important;}
 .topnav a:first-child {z-index: 5;}
 .topnav a:last-child {transform: none; z-index: 100;}
 .topnav.responsive a:not(:first-child) {
     transform: translate(0%, 0%) !important;
-    transition: transform 1s !important;
+    transition: transform 1s, height 1s !important;
 }
 .topnav.responsive a:first-child {
     transform: translate(0%, 0%) !important;
-    transition: transform 1s !important;
+    transition: transform 1s, height 1s !important;
 }
 .topnav.responsive a:last-child {
     transform: translate(0%, 0%) !important;
-    transition: transform 1s !important;
+    transition: transform 1s, height 1s !important;
     text-align: center;
 }
 .topnav a.icon {
